src/frontend/parser/parse.cpp
#include "parse.h"
#include <sema.h>
#include <sstream>

#include "arena.h"

using namespace ccompiler;

// 状态机模式解析TypeSpecifier
enum TypeSpecCombine {
    // 符号
    COM_SIGNED =   SHORT | LONG | LONGLONG | INT | CHAR,
    COM_UNSIGNED = SHORT | LONG | LONGLONG | INT | CHAR,
    // 宽度
    COM_SHORT =  UNSIGNED | SIGNED | INT,
    COM_LONG =  UNSIGNED | SIGNED | LONG | INT | DOUBLE | _COMPLEX,
    // 类型
    COM_BOOL = N_TSPEC,
    COM_VOID = N_TSPEC,
    COM_CHAR = UNSIGNED | SIGNED,
    COM_INT =  UNSIGNED | SIGNED | SHORT | LONG | LONGLONG,
    COM_FLOAT =  _COMPLEX,
    COM_DOUBLE = LONG | _COMPLEX,
    COM_COMPLEX = FLOAT | DOUBLE | LONG,
    COM_RECORD = N_TSPEC,
    COM_ENUM= N_TSPEC,
    COM_TYPEDEFNAME = N_TSPEC,
};

ScopeManager::ScopeManager(Parser* p, Scope::ScopeType st)
: parent_(p) 
{
    if (st == Scope::FILE) {
        parent_->m_systable->enterFileScope();
    }else if (st == Scope::BLOCK) {
        parent_->m_systable->enterBlockScope();
    }else if (st == Scope::FUNC) {
        parent_->m_systable->enterFuncScope();
    }else if (st == Scope::FUNC_PROTOTYPE) {
        parent_->m_systable->enterFuncPrototypeScope();
    }
}
ScopeManager::~ScopeManager() 
{
    parent_->m_systable->exitScope();
}

Parser::Parser()
{

}

Parser::~Parser()
{

}

void Parser::sytaxError(const std::string& val)
{
    sytaxError(m_tokenSeq->cur(), val);
}

void Parser::sytaxError(Token *tk, const std::string& val)
{
    #define RED "\033[31m"
    #define CANCEL "\033[0m"
    std::stringstream ss;
    ss << tk->loc_.filename 
        << ":" 
        << tk->loc_.line 
        << ":" 
        << tk->loc_.column 
        << ": "
        << RED 
        << "error: " 
        << CANCEL
        << val 
        << std::endl
        << m_source->segline(tk->loc_)
        << std::string(tk->loc_.column, ' ') 
        << "^ "  
        << RED 
        << std::string(m_source->segline(tk->loc_).size() - tk->loc_.column - 2, '~')
        << CANCEL 
        << std::endl;
    #undef RED
    #undef CANCEL
    throw CCError(ss.str());
}

void Parser::semaError(const std::string& val)
{
    semaError(m_tokenSeq->cur(), val);
}

void Parser::semaError(Token *tk, const std::string& val)
{
#define RED "\033[31m"
    #define CANCEL "\033[0m"
    std::stringstream ss;
    ss << tk->loc_.filename 
        << ":" 
        << tk->loc_.line 
        << ":" 
        << tk->loc_.column 
        << ": "
        << RED 
        << "error: " 
        << CANCEL
        << val 
        << std::endl
        << m_source->segline(tk->loc_)
        << std::string(tk->loc_.column, ' ') 
        << "^ "  
        << RED 
        << std::string(m_source->segline(tk->loc_).size() - tk->loc_.column - 2, '~')
        << CANCEL 
        << std::endl;
    #undef RED
    #undef CANCEL
    std::cerr << ss.str();
}

//---------------------------------------------------------Expressions------------------------------------------------------------------------
/* primary-expression:
 identifier
 constant
 string-literal
 ( expression )
  generic-selection
*/
Expr* Parser::parsePrimaryExpr()
{
    switch (m_tokenSeq->next()->kind_)
    {
    case TokenKind::Identifier:
    {
        auto sys = m_systable->LookupNormal(m_tokenSeq->cur()->value_);
        if (!sys)
            semaError("symbol undefined!");
        else if (!sys->getDecl())
            semaError("symbol declaration undefined!");
        else {
            auto node = Arena::make<DeclRefExpr>();
            node->setType(sys->getType());
            node->setDecl(sys->getDecl());
            return node;
        }
    }    

    case TokenKind::Numeric_Constant_:
    {
        auto node = Arena::make<IntegerLiteral>();
        node->setValue(std::atoll(m_tokenSeq->cur()->value_.c_str()));
        node->setType(m_systable->getBuiltTypeByTS(TypeSpecifier::LONGLONG));
        return node;
    }

    case TokenKind::Float_Constant:
    {
        auto node = Arena::make<FloatingLiteral>();
        node->setValue(std::atof(m_tokenSeq->cur()->value_.c_str()));
        node->setType(m_systable->getBuiltTypeByTS(TypeSpecifier::DOUBLE));
        return node;
    }

    case TokenKind::Character_Constant_:
    {
        auto node = Arena::make<CharacterLiteral>();
        node->setValue(m_tokenSeq->cur()->value_.at(0));
        node->setType(m_systable->getBuiltTypeByTS(TypeSpecifier::CHAR));
        return node;
    }

    case TokenKind::String_Constant_:
    {
        auto node = Arena::make<StringLiteral>();
        node->setValue(m_tokenSeq->cur()->value_);
        return node;
    }
    
    case TokenKind::LParent_:
    {
        auto child = parseExpr();
        m_tokenSeq->expect(TokenKind::RParent_);
        auto node = Arena::make<ParenExpr>();
        node->setSubExpr(child);
        node->setType(child->getType());
        return node;
    }

    default:
        sytaxError(m_tokenSeq->cur(), "unexpect PrimaryExpr!");
        break;
    }
    return nullptr;
}

/* (6.5.1.1) gegneric-selection:
 _Generic ( assignment-expression , generic-assoc-list
 )
 (6.5.1.1) generic-assoc-list:
 generic-association
 generic-assoc-list , generic-association
*/
Expr* Parser::parseGenericSelection()
{
    m_tokenSeq->expect(TokenKind::T_Generic);
    m_tokenSeq->expect(TokenKind::LParent_);
    parseAssignExpr();
    while (m_tokenSeq->match(TokenKind::Comma_)) {
        parseGenericAssociation();
    }
    m_tokenSeq->expect(TokenKind::RParent_);
    return nullptr;
}

/*(6.5.1.1) generic-association:
 type-name : assignment-expression
 default : assignment-expression
*/
Expr* Parser::parseGenericAssociation()
{
    if (m_tokenSeq->match(TokenKind::Default)) {

    }
    else {
        parseTypeName();
    }
    m_tokenSeq->match(TokenKind::Colon_);
    parseAssignExpr();
    return nullptr;
}

/* (6.5.2) postfix-expression:
    消除左递归文法后:
    postfix-expression = (( type-name ){ initializer-list } | ( type-name ){ initializer-list ,} | primary-expression）tail
    tail = ( [ expression ] | ( argument-expression-listopt ) | . identifier | -> identifier | ++ | -- ) tail | e
    解析重点：
    复合字面值和primary都具备 （type-name）(expr)等括号表达式形式
*/
Expr* Parser::parsePostfixExpr()
{
    Expr* node = nullptr;
    if (m_tokenSeq->test(TokenKind::LParent_)) {
        node = parseParenExpr();
    }
    else {
        node = parsePrimaryExpr();
    }
    while (true) {
        if (m_tokenSeq->match(TokenKind::LSquare_Brackets_)) {
            auto array = Arena::make<ArraySubscriptExpr>();
            array->setIndexExpr(parseExpr());
            array->setBaseExpr(node);
            m_tokenSeq->expect(TokenKind::RSquare_Brackets_);
        }
        else if (m_tokenSeq->match(TokenKind::LParent_)) {
            auto args = Arena::make<CallExpr>();
            args->setParams(parseArgListExpr());
            args->setCallee(node);
            m_tokenSeq->expect(TokenKind::RParent_);
        }
        else if (m_tokenSeq->match(TokenKind::Dot_)) {
            // TODO 成员运算符
        }
        else if (m_tokenSeq->match(TokenKind::Arrow_)) {
            // TODO 成员运算符
        }
        // 自增表达式
        else if (m_tokenSeq->match(TokenKind::Increment_)) {
            auto inc = Arena::make<UnaryOpExpr>();
            inc->setOpCode(UnaryOpExpr::Post_Increment_);
            inc->setSubExpr(node);
            node = inc;
        }
        // 自减表达式
        else if (m_tokenSeq->match(TokenKind::Decrement_)) {
            auto dec = Arena::make<UnaryOpExpr>();
            dec->setOpCode(UnaryOpExpr::Post_Decrement_);
            dec->setSubExpr(node);
            node = dec;
        }
        else {
            break;
        }
    }
    return node;
}

std::vector<Expr*> Parser::parseArgListExpr()
{
    std::vector<Expr*> res;
    res.push_back(parseAssignExpr());
    while (m_tokenSeq->match(TokenKind::Comma_)) {
        res.push_back(parseAssignExpr());
    }
    return res;
}

/*
 (6.5.3) unary-expression:
    postfix-expression
    ++ unary-expression
    -- unary-expression
    unary-operator cast-expression
    sizeof unary-expression
    sizeof ( type-name )

unary-operator: one of
    & * +- ~ !
*/
Expr* Parser::parseUnaryExpr()
{
    auto node = Arena::make<UnaryOpExpr>();
    switch (m_tokenSeq->peek()->kind_)
    {
    case TokenKind::Increment_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::Pre_Increment_);
        node->setSubExpr(parseUnaryExpr());
        break;

    case TokenKind::Decrement_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::Pre_Decrement_);
        node->setSubExpr(parseUnaryExpr());
        break;

    case TokenKind::BitWise_AND_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::BitWise_AND_);
        node->setSubExpr(parseCastExpr());
        break;

    case TokenKind::Multiplication_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::Multiplication_);
        node->setSubExpr(parseCastExpr());
        break;

    case TokenKind::Addition_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::Addition_);
        node->setSubExpr(parseCastExpr());
        break;

    case TokenKind::Subtraction_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::Subtraction_);
        node->setSubExpr(parseCastExpr());
        break;

    case TokenKind::BitWise_NOT_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::BitWise_NOT_);
        node->setSubExpr(parseCastExpr());
        break;

    case TokenKind::Logical_NOT_:
        m_tokenSeq->next();
        node->setOpCode(UnaryOpExpr::Logical_NOT_);
        node->setSubExpr(parseCastExpr());
        break;
    
    case TokenKind::Sizeof:
        break;
    
    case TokenKind::Alignof:
        break;

    default:
        return parsePostfixExpr();
    }
    return node;
}

/*(6.5.4) cast-expression:
 unary-expression
 ( type-name ) cast-expression
*/
Expr* Parser::parseCastExpr()
{
    return parseUnaryExpr();
}

Expr* Parser::parseMultiExpr()
{
    auto node = parseCastExpr();
    while (true) {
        auto rex = Arena::make<BinaryOpExpr>();
        if (m_tokenSeq->match(TokenKind::Multiplication_)) {
            rex->setOpCode(BinaryOpExpr::Multiplication_);
        } 
        else if (m_tokenSeq->match(TokenKind::Division_)) {
            rex->setOpCode(BinaryOpExpr::Division_);
        } 
        else if (m_tokenSeq->match(TokenKind::Modulus_)) {
            rex->setOpCode(BinaryOpExpr::Modulus_);
        } 
        else {
            break;
        }
        rex->setLExpr(node);
        rex->setRExpr(parseCastExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseAddExpr()
{
    auto node = parseMultiExpr();
    while (true) {
        auto rex = Arena::make<BinaryOpExpr>();
        if (m_tokenSeq->match(TokenKind::Addition_)) {
            rex->setOpCode(BinaryOpExpr::Addition_);
        } else if (m_tokenSeq->match(TokenKind::Subtraction_)) {
            rex->setOpCode(BinaryOpExpr::Subtraction_);
        } else {
            break;
        }
        rex->setLExpr(node);
        rex->setRExpr(parseMultiExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseShiftExpr()
{
    auto node = parseAddExpr();
    while (true) {
        auto rex = Arena::make<BinaryOpExpr>();
        if (m_tokenSeq->match(TokenKind::LShift_)) {
            rex->setOpCode(BinaryOpExpr::LShift_);
        } else if (m_tokenSeq->match(TokenKind::RShift_)) {
            rex->setOpCode(BinaryOpExpr::RShift_);
        } else {
            break;
        }
        rex->setLExpr(node);
        rex->setRExpr(parseAddExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseRelationalExpr()
{
    auto node = parseShiftExpr();
    while (true) {
        auto rex = Arena::make<BinaryOpExpr>();
        if (m_tokenSeq->match(TokenKind::Less_)) {
            rex->setOpCode(BinaryOpExpr::Less_);
        } else if (m_tokenSeq->match(TokenKind::Less_Equal_)) {
            rex->setOpCode(BinaryOpExpr::Less_Equal_);
        } else if (m_tokenSeq->match(TokenKind::Greater_)) {
            rex->setOpCode(BinaryOpExpr::Greater_);
        } else if (m_tokenSeq->match(TokenKind::Greater_Equal_)) {
            rex->setOpCode(BinaryOpExpr::Greater_Equal_);
        } else  {
            break;
        }
        rex->setLExpr(node);
        rex->setRExpr(parseShiftExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseEqualExpr()
{
    auto node = parseRelationalExpr();
    while (true) {
        auto rex = Arena::make<BinaryOpExpr>();
        if (m_tokenSeq->match(TokenKind::Equality_)) {
            rex->setOpCode(BinaryOpExpr::Equality_);
        } else if (m_tokenSeq->match(TokenKind::Inequality_)) {
            rex->setOpCode(BinaryOpExpr::Inequality_);
        } else {
            break;
        }
        rex->setLExpr(node);
        rex->setRExpr(parseRelationalExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseBitANDExpr()
{
    auto node = parseEqualExpr();
    while (m_tokenSeq->match(TokenKind::BitWise_AND_)) {
        auto rex = Arena::make<BinaryOpExpr>();
        rex->setOpCode(BinaryOpExpr::BitWise_AND_);
        rex->setLExpr(node);
        rex->setRExpr(parseEqualExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseBitXORExpr()
{
    auto node = parseBitANDExpr();
    while (m_tokenSeq->match(TokenKind::BitWise_XOR_)) {
        auto rex = Arena::make<BinaryOpExpr>();
        rex->setOpCode(BinaryOpExpr::BitWise_XOR_);
        rex->setLExpr(node);
        rex->setRExpr(parseBitANDExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseBitORExpr()
{
    auto node = parseBitXORExpr();
    while (m_tokenSeq->match(TokenKind::BitWise_OR_)) {
        auto rex = Arena::make<BinaryOpExpr>();
        rex->setOpCode(BinaryOpExpr::BitWise_OR_);
        rex->setLExpr(node);
        rex->setRExpr(parseBitXORExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseLogicalANDExpr()
{
    auto node = parseBitORExpr();
    while (m_tokenSeq->match(TokenKind::Logical_AND_)) {
        auto rex = Arena::make<BinaryOpExpr>();
        rex->setOpCode(BinaryOpExpr::Logical_AND_);
        rex->setLExpr(node);
        rex->setRExpr(parseBitORExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseLogicalORExpr()
{
    auto node = parseLogicalANDExpr();
    while (m_tokenSeq->match(TokenKind::Logical_OR_)) {
        auto rex = Arena::make<BinaryOpExpr>();
        rex->setOpCode(BinaryOpExpr::Logical_OR_);
        rex->setLExpr(node);
        rex->setRExpr(parseLogicalANDExpr());
        node = rex;
    }
    return node;
}

Expr* Parser::parseConditionalExpr()
{
    auto node = parseLogicalORExpr();
    if (m_tokenSeq->match(TokenKind::Conditional_)) {
        auto rex = Arena::make<ConditionalExpr>();
        rex->setCond(node);
        rex->setElse(parseExpr());
        m_tokenSeq->expect(TokenKind::Colon_);
        rex->setThen(parseConditionalExpr());
        node = rex;
    }
    return node;
}

/*(6.5.16) assignment-expression:
 conditional-expression
 unary-expression assignment-operator assignment-expression
 分析难点：assign有两个的候选式，无法判断使用哪个候选式，文法改写成：
 conditional-expression
 conditional-expression assignment-operator assignment-expression
 conditional-expression包含了unary-expression， 语义分析阶段纠正
 (6.5.16) assignment-operator: one of
 = *= /= %= +=-= <<= >>= &= ^= |=
*/
Expr* Parser::parseAssignExpr()
{
    auto node = parseConditionalExpr();
    auto code = BinaryOpExpr::Unknown;
    switch (m_tokenSeq->peek()->kind_)
    {
    case TokenKind::Assign_:
        code = BinaryOpExpr::Assign_;
        break;

    case TokenKind::Mult_Assign_:
        code = BinaryOpExpr::Mult_Assign_;
        break;

    case TokenKind::Div_Assign_:
        code = BinaryOpExpr::Div_Assign_;
        break;

    case TokenKind::Mod_Assign_:
        code = BinaryOpExpr::Mod_Assign_;
        break;

    case TokenKind::Add_Assign_:
        code = BinaryOpExpr::Add_Assign_;
        break;

    case TokenKind::Sub_Assign_:
        code = BinaryOpExpr::Sub_Assign_;
        break;

    case TokenKind::LShift_Assign_:
        code = BinaryOpExpr::LShift_Assign_;
        break;

    case TokenKind::RShift_Assign_:
        code = BinaryOpExpr::RShift_Assign_;
        break;

    case TokenKind::BitWise_AND_Assign_:
        code = BinaryOpExpr::BitWise_AND_Assign_;
        break;

    case TokenKind::BitWise_XOR_Assign_:
        code = BinaryOpExpr::BitWise_XOR_Assign_;
        break;

    case TokenKind::BitWise_OR_Assign_:
        code = BinaryOpExpr::BitWise_OR_Assign_;
        break;
        
    default:
        return node;
    }
    m_tokenSeq->next();
    auto rex = Arena::make<BinaryOpExpr>();
    rex->setOpCode(code);
    rex->setLExpr(node);
    rex->setRExpr(parseAssignExpr());
    return rex;
}

/*
 (6.5.17) expression:
 assignment-expression
 expression , assignment-expression
*/
Expr* Parser::parseExpr()
{
    auto node = parseAssignExpr();
    while (m_tokenSeq->match(TokenKind::Comma_)) {
        auto rex = Arena::make<BinaryOpExpr>();
        rex->setOpCode(BinaryOpExpr::Comma);
        rex->setLExpr(node);
        rex->setRExpr(parseAssignExpr());
        node = rex;
    }
    return node;
}

/*(6.6) constant-expression:
 conditional-expression
*/
Expr* Parser::parseConstansExpr()
{
    return parseConditionalExpr();
}

/* primary-expr: ( expr )
   posftix-expr： （type-name）{...}
   cast-expr: (type-name) cast-expr
*/
Expr* Parser::parseParenExpr()
{
    m_tokenSeq->expect(TokenKind::LParent_);
    if (m_systable->isTypeName(m_tokenSeq->peek())) {
        QualType qt = parseTypeName();
        m_tokenSeq->expect(TokenKind::RParent_);
        if (m_tokenSeq->match(TokenKind::LCurly_Brackets_)) {
            // TODO
        }
        else {
            // TODO
        }
    }
    else {
        auto node = Arena::make<ParenExpr>();
        node->setSubExpr(parseExpr());
        m_tokenSeq->expect(TokenKind::RParent_);
        return node;
    }
    return nullptr;
}

//---------------------------------------------------------Declarations------------------------------------------------------------------------
/* (6.7) declaration:
 declaration-specifiers init-declarator-listopt ;
 若类型declSpec是type-name, 则init-declarator不需要解析。
*/
DeclGroup Parser::parseDeclaration()
{
    DeclGroup res;
    auto declarator = parseDeclarationSpec();
    if (m_tokenSeq->match(TokenKind::Semicolon_)) {
        // 枚举，结构体和typedef返回，不加入到全局声明
        return res;
    }

    // 解析第一个声明符
    auto decl = parseInitDeclarator(declarator);
    // 检测是否是函数
    if (decl->getKind() == AstNode::NK_FunctionDecl) {
        auto func = dynamic_cast<FunctionDecl*>(decl);
        // 判断是否是函数定义是，直接返回
        if (m_tokenSeq->test(TokenKind::LCurly_Brackets_)) {
            func->setBody(parseCompoundStmt());
            func->setIsDefinition(true);
            res.push_back(decl);
            return res;
        } 
    }
    // 不是函数定义时，添加到res
    res.push_back(decl);
    // 解析后续的变量声明
    while (m_tokenSeq->match(TokenKind::Comma_)) {
            res.push_back(parseInitDeclarator(declarator));
    }
    m_tokenSeq->expect(TokenKind::Semicolon_);
    return res;
}

Declarator Parser::parseDeclarationSpec()
{
    Declarator res;
    int ts = 0, tq = 0;
    while (true)
    {
        TokenKind tkind = m_tokenSeq->next()->kind_;
        switch (tkind)
        {
        // (6.7.1) storage class specifier
        case TokenKind::Typedef:
            if (res.getStorageClass() != 0) {
                sytaxError("duplication storageclass!");
            }
            res.setStorageClass(StorageClass::TYPEDEF);
            res.setKind(Declarator::DK_TYPEDEFNAME);
            break;
        case TokenKind::Extern:
            if (res.getStorageClass() != 0) {
                sytaxError("duplication storageclass!");
            }
            res.setStorageClass(StorageClass::EXTERN);
            break;
        case TokenKind::Static:
            if (res.getStorageClass() != 0) {
                sytaxError("duplication storageclass!");
            }
            res.setStorageClass(StorageClass::STATIC);
            break;
        case TokenKind::Auto:
            if (res.getStorageClass() != 0) {
                sytaxError("duplication storageclass!");
            }
            res.setStorageClass(StorageClass::AUTO);
            break;
        case TokenKind::Register:
            if (res.getStorageClass() != 0) {
                sytaxError("duplication storageclass!");
            }
            res.setStorageClass(StorageClass::REGISTER);
            break;

        // (6.7.2) type specifiers
        // 使用状态机解析TypeSpecifier
        case TokenKind::T_Bool:
            if (ts & ~COM_BOOL) {
                sytaxError("unexpect bool!");
            }
            ts |= TypeSpecifier::_BOOL;
            break;

        case TokenKind::T_Complex:
            if (ts & ~COM_COMPLEX) {
                sytaxError("unexpect complex!");
            }
            ts |= TypeSpecifier::_COMPLEX;
            break;

        case TokenKind::Void:
            if (ts & ~COM_VOID) {
                sytaxError("unexpect void!");
            }
            ts |= TypeSpecifier::VOID;
            break;

        case TokenKind::Char:
            if (ts & ~COM_CHAR) {
                sytaxError("unexpect char!");
            }
            ts |= TypeSpecifier::CHAR;
            break;

        case TokenKind::Int:
            if (ts & ~COM_INT) {
                sytaxError("unexpect int!");
            }
            ts |= TypeSpecifier::INT;
            break;

        case TokenKind::Float:
            if (ts & ~COM_FLOAT) {
                sytaxError("unexpect float!");
            }
            ts |= TypeSpecifier::FLOAT;
            break;

        case TokenKind::Double:
            if (ts & ~COM_DOUBLE) {
                sytaxError("unexpect double!");
            }
            ts |= TypeSpecifier::DOUBLE;
            break;

        case TokenKind::Signed:
            if (ts & ~COM_SIGNED) {
                sytaxError("unexpect signed!");
            }
            ts |= TypeSpecifier::SIGNED;
            break;

        case TokenKind::Unsigned:
            if (ts & ~COM_UNSIGNED) {
                sytaxError("unexpect unsigned!");
            }
            ts |= TypeSpecifier::UNSIGNED;
            break;

        case TokenKind::Short:
            if (ts & ~COM_SHORT) {
                sytaxError("unexpect short!");
            }
            ts |= TypeSpecifier::SHORT;
            break;

        case TokenKind::Long:
            if (ts & ~COM_LONG) {
                sytaxError("unexpect long!");
            }
            // 筛除不合法
            if (ts & LONG) {
                // 没有long long double/ long long complex形式
                if ( ts & DOUBLE || ts & _COMPLEX) {
                    sytaxError("unexpect long!");
                } else {
                    ts &= ~LONG;
                    ts |= LONGLONG;
                }
            } else {
                ts |= LONG;
            } 
            break;

        // (6.7.2) type-specifier->struct-or-union-specifier
        case TokenKind::Struct:
        case TokenKind::Union:
        {
            bool isStruct = m_tokenSeq->cur()->kind_ == TokenKind::Struct;
            if (ts & ~COM_RECORD) {
                sytaxError("unexpect struct or union!");
            }
            res.setType(QualType(parseStructOrUnionSpec(isStruct), tq));
            res.setKind(Declarator::DK_RECORD);
            return res;
        }

        // (6.7.2) type-specifier->enum-specifier
        case TokenKind::Enum:
            if (ts & ~COM_ENUM) {
                sytaxError("unexpect enum!");
            }
            res.setType(QualType(parseEnumSpec(), tq));
            res.setKind(Declarator::DK_ENUM);
            return res;

        //(6.7.3) type-qualifier:
        case TokenKind::Const:    tq |= TypeQualifier::CONST; break;
        case TokenKind::Volatile: tq |= TypeQualifier::VOLATILE; break;
        case TokenKind::Restrict: tq |= TypeQualifier::RESTRICT; break;

        // (6.7.4) function-specifier
        case TokenKind::Inline:
            res.setFuncSpec(FuncSpecifier::INLINE);
            res.setKind(Declarator::DK_FUNC);
            break;

        // (6.7.7) typedef-name 判断当前是否已有其他方式
        case TokenKind::Identifier:
            // 遇到标识符后，判断是否有基本类型
            if (ts) {
                res.setType(QualType(m_systable->getBuiltTypeByTS(ts), tq));
                m_tokenSeq->reset();
            }
            // 判断之前是否已经有类型
            else if (!res.getType().isNull()) {
                m_tokenSeq->reset();
            }
            // 判断标识符是否是类型
            else if (m_systable->isTypeName(m_tokenSeq->cur())){
                auto sys = m_systable->LookupNormal(m_tokenSeq->cur()->value_);
                if (sys) {
                    auto ty = sys->getType();
                    res.setType(QualType(ty.getPtr(), ty.getQual()|tq));
                }
            }
            else {
                sytaxError("expect type, but not!");
                break;
            }

        default:
            // 遇到了标识符或者其他
            if (res.getType().isNull()) {
                sytaxError("incomplete type specifier!");
            }
            return res;
        }
    }
    return res;
}
